--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
    <img src="images/sharmin-pic-bg.png" alt=""> 
 </div></section>
 
-         
-    
+  <section class="Dream-Big">
+      <div class="half-width">
+          <img src="images/my-next.png" alt="">
+      </div>
+      <div class="half-width">
+          <h1>Dream Big</h1>
+          <h3>Become a Web Weveloper</h3>
+          <p>I already learned the basic HTML and CSS.I can build any simple website.I can even teach anyone how to make simple website.My goal is to build more websites and learn advanced topics.</p>
+          <a class="link-button" target="-blank" href="">DOWNLOAD RESUME</a>
+
+
+      </div>
+
+  </section>   
 </body>
 </html>
