--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="half-width">
           <h1>Dream Big</h1>
-          <h3>Become a Web Weveloper</h3>
+          <h3>Become a Web Developer</h3>
           <p>I already learned the basic HTML and CSS.I can build any simple website.I can even teach anyone how to make simple website.My goal is to build more websites and learn advanced topics.</p>
           <a class="link-button" target="-blank" href="">DOWNLOAD RESUME</a>
 
