--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<body><section class="top-banner">
+<body><section class="top-banner flexible-container">
     <div class="half-width">
     <h1>Welcome To</h1>
     <h1><span class="orange-color">Sharmin Sumona</span> World!</h1>
@@ -24,7 +24,7 @@
    <img src="images/sharmin-pic-bg.png" alt=""> 
 </div></section>
 
-  <section class="Dream-Big">
+  <section class="Dream-Big flexible-container">
       <div class="half-width">
           <img src="images/my-next.png" alt="">
       </div>
@@ -37,6 +37,23 @@
 
       </div>
 
-  </section>   
+  </section>  
+  <section class="experience-area">
+      <h1>Experiences Area</h1>
+       
+  <div class="flexible-container">
+      <div class='half-width"'>
+    <h1>full stack developer</h1>
+    <h3>i'm working for early stages but trying to do better</h3>
+    <p>i want to be a full stack web developer for that i'm learning advanced topics.</p>
+
+</div>
+<div class="half-width">
+    <h1>Junior web developer</h1>
+    <h3>2021-present | programming hero learner</h3>
+    <p>i'm working as a junior web developer</p>
+</div>
+</div>
+</section>
 </body>
 </html>
