--- a/index.html
+++ b/index.html
@@ -42,18 +42,23 @@
       <h1>Experiences Area</h1>
        
   <div class="flexible-container">
-      <div class='half-width"'>
+    <div id="full-stack-experience" class="experience-item">
     <h1>full stack developer</h1>
-    <h3>i'm working for early stages but trying to do better</h3>
+    <h3 class="orange-color">i'm working for early stages but trying to do better</h3>
     <p>i want to be a full stack web developer for that i'm learning advanced topics.</p>
 
 </div>
-<div class="half-width">
+<div id="web-dev-experince" class="experience-item">
     <h1>Junior web developer</h1>
-    <h3>2021-present | programming hero learner</h3>
+    <h3 class="orange-color">2021-present | programming hero learner</h3>
+
     <p>i'm working as a junior web developer</p>
 </div>
 </div>
 </section>
+<footer>
+    <p>@Sumona 2021, a programming Hero initiative.<\p>
+    </footer>
+
 </body>
 </html>
